deploy/k8s/staging/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gau-phim-frontend-service
  namespace: bao-${DEPLOY_ENV}-env
spec:
  selector:
    app: gau-phim-frontend-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
